let me just deploy so i can play dota

--- a/travel/index.html
+++ b/travel/index.html
@@ -414,17 +414,24 @@
                 <h5>Downtown &nbsp; West Campus</h5>
               </div>
               <p>
-                “IT” (otherwise known as HD 36405.b) isn’t your average
-                “oddball” exo-solar planet made of rock that wobbles on its end
-                &amp; zips around a nearby star in less than 2.46 days.
+                Caffé Medici is dedicated to service. Our customers and
+                employees are the most essential component to Medici. Without
+                customers and great employees to serve them, it doesn't matter
+                how good your coffee is.
 
-                Seeking a spot of serenity somewhere in the universe, I recently
-                booked a deep-discount dodgy berth on the ‘White Elephant
-                Express Space Shuttle’, to a little known place in a galaxy far,
-                far away. If truth be told, (after reading random excerpts from
-                “The Itty Bitty Bunkum Book About Life, the Universe &amp;
-                Practically Everything Under the Sun Not To Mention Stuff Going
-                On In Remote Galaxies), I was basically delirious.
+                However, quality in the cup inspires our service. We have a
+                passion for coffee: to learn. We aspire to perfection. It is a
+                tedious and dedicated journey, but
+                this is our end.
+
+                We believe in a holistic approach to life, a sustainable
+                business model. Our actions impact the world, so it is
+                important for us to produce good fruit. It is necessary for us
+                to be good stewards of our resources. As customers, employees,
+                and owners we have a responsibility to our fellow humans and
+                environment. A sustainable business models this by taking care
+                of its employees, recycling, using products with a similar
+                philosophy, and pursuing quality.
               </p>
             </article>
           </li>
@@ -441,17 +448,19 @@
                 <h5>Domain &nbsp; Great Hills &nbsp; South Austin &nbsp; Allandale</h5>
               </div>
               <p>
-                “IT” (otherwise known as HD 36405.b) isn’t your average
-                “oddball” exo-solar planet made of rock that wobbles on its end
-                &amp; zips around a nearby star in less than 2.46 days.
+                Shake Shack sprouted from a hot dog cart in Madison Square Park
+                in Manhattan to support the Madison Square Park Conservancy’s
+                first art installation. The cart was quite the success, with
+                Shack fans lined up daily for three summers.
 
-                Seeking a spot of serenity somewhere in the universe, I recently
-                booked a deep-discount dodgy berth on the ‘White Elephant
-                Express Space Shuttle’, to a little known place in a galaxy far,
-                far away. If truth be told, (after reading random excerpts from
-                “The Itty Bitty Bunkum Book About Life, the Universe &amp;
-                Practically Everything Under the Sun Not To Mention Stuff Going
-                On In Remote Galaxies), I was basically delirious.
+                In 2004, a permanent kiosk opened in the park: Shake Shack was
+                born. This modern day “roadside” burger stand serves up the most
+                delicious burgers, hot dogs, frozen custard, shakes, beer, wine
+                and more. An instant neighborhood fixture, Shake Shack welcomed
+                people from all over the city, country and world who gathered
+                together to enjoy fresh, simple, high-quality versions of the
+                classics in a majestic setting. The rest, as they say, is burger
+                history.
               </p>
             </article>
           </li>
@@ -672,17 +681,13 @@
                 <h5>Barton Hills &nbsp; South Austin</h5>
               </div>
               <p>
-                “IT” (otherwise known as HD 36405.b) isn’t your average
-                “oddball” exo-solar planet made of rock that wobbles on its end
-                &amp; zips around a nearby star in less than 2.46 days.
+                Catering to thick-skinned gourmets with impeccable taste and an
+                appetite for blue-collar gourmet fair.
 
-                Seeking a spot of serenity somewhere in the universe, I recently
-                booked a deep-discount dodgy berth on the ‘White Elephant
-                Express Space Shuttle’, to a little known place in a galaxy far,
-                far away. If truth be told, (after reading random excerpts from
-                “The Itty Bitty Bunkum Book About Life, the Universe &amp;
-                Practically Everything Under the Sun Not To Mention Stuff Going
-                On In Remote Galaxies), I was basically delirious.
+                “Hey!… You gonna eat or what?: Home of the world’s best Monte
+                Cristo.
+
+                An Austin tradition since… well, since October 2011.
               </p>
             </article>
           </li>
@@ -735,18 +740,19 @@
                 <h5>South Austin</h5>
               </div>
               <p>
-                The first menu was filled more with experiments than meals. So
-                whenever Mike heard his customers holler "damn these tacos are
-                good!" they were added to the menu. Soon "Damn Good" became a
-                rally cry at the trailer. The Taco Dream grew and took on a life
-                of its own with long lines and happy customers.
+                A casual setting with seating inside and out. The Flying Carpet
+                turns Moroccan cuisine on it's head with a revolutionary vision
+                to make ancient Moroccan culinary techniques relevant and modern.
                 <br>
-                Today Torchy's Tacos operate over 30 stores and a trailer park.
-                They've won a bunch of cool awards and had write-ups and videos
-                spread across the nation. You can still find that passion in the
-                food at any Torchy's, and none of it would be possible without
-                all the customers, employees, friends and fans that share in the
-                Taco Dream.
+                ANCIENT Compromise is not a  word used in Moroccan kitchens;
+                cutting corners, food costs, or profit margins, do not dictate
+                our menu or preparation. That means no par-cooking, mass prep or
+                long hold times. You order it, we make it. NO preservatives,
+                added chemicals hormones or pre-prepared food.
+                <br>
+                MODERN In order to serve Austin's diverse and traveled clientele
+                we must remain inspired. We do not let old traditions hinder our
+                passion for exciting new food options.
               </p>
             </article>
           </li>
@@ -763,27 +769,19 @@
                 <h5>Downtown &nbsp; Domain</h5>
               </div>
               <p>
-                We are and always will be a place for people to come and be
-                themselves.
+                South by Southwest is fast approaching. As innovators and
+                creatives gear up for the “next big thing” this year they are
+                looking for fun and impactful ways to capture the hearts and
+                minds of festival attendees.
                 <br>
-                And we’ve stocked our place with a delectable collection of
-                unequalled music, food, games, and beverages for you to enjoy as
-                you’re being yourself.
-                <br>
-                You see, we don’t believe in uncomfortable chairs, bland walls,
-                and fluorescent lights. Those things belong in the 9 to 5 world.
-                We DO believe in a ‘dirty modern’ mash up of chandeliers,
-                ‘Gangster’s Paradise,’ food for foodies, PBR tallboys, and craft
-                beverages. We believe in brunch turning into a bowling party and
-                bowling parties turning into all-you-can-sing karaoke. We
-                believe in exploring evenings filled with shuffleboard and
-                made-from-scratch chicken and waffles.
-                <br>
-                You put your responsible, ironed, adult pants every day of the
-                week and you deserve a place where ties and khakis are a choice
-                not a requirement. We are that place—and there are untold
-                possibilities waiting for you here. Come and discover for
-                yourself.
+                This is where Chi’Lantro come in. We have helped agencies,
+                experiential marketing firms and tech companies experience 
+                significant return on their marketing investment. Intuit, for
+                example, launched their new product GoPayment through a
+                marketing activation in partnership with us in 2012. Since March
+                of 2012, according to Javelin Strategy and Research, GoPayment
+                has become one of the top three mobile payment processors and
+                their usage increased more than 150% since March to April 2013.
               </p>
             </article>
           </li>
