time sensitive working

--- a/travel/index.html
+++ b/travel/index.html
@@ -55,7 +55,7 @@
           <h6 class="dropdown activities">Type of Activity</h6>
           <h6 class="dropdown districts">District</h6>
           <!-- <h6 class="radio-input">Austin Exclusives</h6> -->
-          <h6 class="radio-input"><span class="active"></span>Time Sensitive</h6>
+          <h6 class="radio-input"><span class=""></span>Time Sensitive</h6>
 
           <div class="waypoints-wrapper">
             <span><h6>Your Waypoints</h6><img class="icon" src="dist/images/icons/itinerary-white.png" alt=""></span>
@@ -249,7 +249,7 @@
     <main class="wrapper stay">
       <section class="filtered-things">
         <!-- Subject to change -->
-        <h4><span class="activity">What to do</span> in <span class="district">Austin</span> <span class="reset hidden">Reset</span></h4>
+        <h4><span class="time-sensitive hidden">Time sensitive</span> <span class="activity">Things to do</span> near <span class="district">Austin</span> <span class="reset">Reset</span></h4>
         <ul>
           <li data-activity="nature" class="thing">
             <figure>
@@ -464,7 +464,7 @@
               </p>
             </article>
           </li>
-          <li data-activity="nature" class="thing">
+          <li data-activity="nature" class="thing time-sensitive">
             <figure>
               <img src="dist/images/things/zilker-cropped.jpeg" alt="" />
               <figcaption><h3>Zilker Park</h3>
@@ -696,7 +696,7 @@
 
 
 
-          <li data-activity="food" class="thing">
+          <li data-activity="food" class="thing time-sensitive">
             <figure>
               <img src="dist/images/things/zilker-cropped.jpeg" alt="" />
               <figcaption><h3>Don Japanese Food Truck</h3>
@@ -775,7 +775,7 @@
                 minds of festival attendees.
                 <br>
                 This is where Chi’Lantro come in. We have helped agencies,
-                experiential marketing firms and tech companies experience 
+                experiential marketing firms and tech companies experience
                 significant return on their marketing investment. Intuit, for
                 example, launched their new product GoPayment through a
                 marketing activation in partnership with us in 2012. Since March
@@ -785,7 +785,7 @@
               </p>
             </article>
           </li>
-          <li data-activity="food-bars" class="thing">
+          <li data-activity="food-bars" class="thing time-sensitive">
             <figure>
               <img src="dist/images/things/shenans-cropped.jpeg" alt="" />
               <figcaption><h3>Easy Tiger</h3>
