did that shit boi

--- a/travel/index.html
+++ b/travel/index.html
@@ -56,7 +56,8 @@
           <!-- <h6 class="radio-input">Austin Exclusives</h6> -->
           <h6 class="radio-input"><span class=""></span>Time Sensitive</h6>
           <h6 class="range hidden">
-          	<input placeholder="Pick date" data-input>
+            Starting After
+          	<input placeholder="Pick a date" data-input>
           </h6>
 
           <div class="waypoints-wrapper">
